namespace _7DRL.MiscConstants {
	public static class Constants {
		public const string commandTypeAttack  = "Attack";
		public const string commandTypeDefense = "Defense";
		public const string commandTypeHeal    = "Heal";
		public const string commandTypeDodge   = "Dodge";

		public const int magicNumber = 7919;

		public static class Player {
			public const int initialMaxHealth = 1000;
		}

		public static class Foes {
			public const int initialMaxHealthCoefficient = 3;
		}
	}
}